--- a/style.css
+++ b/style.css
@@ -19,9 +19,6 @@
     position: relative;
 }
 
-img {
-    height: 600px;
-}
 
 .discount {
     width: 45px;
@@ -63,3 +60,18 @@ img {
     right: 10px;
     top: 30px;
 }
+
+img {
+    height: 600px;
+}
+
+.visible {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.visible:hover {
+    display: none;
+}
+
